added popped out logo, breakpoint reporter, other minor UI fixes

--- a/about.html
+++ b/about.html
@@ -27,7 +27,9 @@
         <span></span>
       </div>
       <div class="logo">
-        <a href="index.html"><img src="images/sww_logo.jpg" alt="Sparrow Woodworks Logo" class="pic_logo"></a>
+        <div class="logo-icon">
+          <a href="index.html"><img src="images/sww_logo.jpg" alt="Sparrow Woodworks Logo" class="pic_logo"></a>
+        </div>
         <a href="index.html"><h1>Sparrow Woodworks</h1></a>
       </div>
       <nav>
@@ -44,7 +46,7 @@
   </header>
 
   <main id="main">
-      <div id="about">
+      <div id="about" class="bkg-header">
         <section class="section">
           <div class="container">
             <h2 class="h1">About Sparrow Woodworks</h2>
@@ -72,15 +74,47 @@
                 </ul>
               </div>
             </div>
-
-
           </div>
         <div>
       </section>
-      <section class="section">
+
+      <section class="section timeline-section">
         <div class="container">
-          <h3>What We're About</h3>
+          <h3>Our Story</h3>
           <p>Have something unique in mind? We can make it happen for you! Every detail matters at Sparrow Woodworks and every piece is customized for you!</p>
+
+          <div class="timeline">
+            <div class="container-timeline left">
+              <div class="content">
+                <h2>March 2018</h2>
+                <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+              </div>
+            </div>
+            <div class="container-timeline right">
+              <div class="content">
+                <h2>May 2017</h2>
+                <p>First year in operation...stuff stuff and more stuff</p>
+              </div>
+            </div>
+            <div class="container-timeline left">
+              <div class="content">
+                <h2>September 2016</h2>
+                <p>First filled for an LLC.</p>
+              </div>
+            </div>
+            <div class="container-timeline right">
+              <div class="content">
+                <h2>July 2016</h2>
+                <p>Got out brancding and name.</p>
+              </div>
+            </div>
+            <div class="container-timeline left">
+              <div class="content">
+                <h2>March 2016</h2>
+                <p>It all started when I saw a sparrow outwide of my window. Thus, Sparrow Woodwork was born! .</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section class="section cta">
