--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <!-- used for development only, REMOVE before turning in -->
+  <link href="css/breakpoint-reporter.css" rel="stylesheet">
+  <!-- end development code REMOVE ME!-->
+
   <link rel="stylesheet" type="text/css" href="css/slick.css"/>
   <link href="css/plug-ins.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
@@ -27,7 +32,9 @@
         <span></span>
       </div>
       <div class="logo">
-        <a href="index.html"><img src="images/sww_logo.jpg" alt="Sparrow Woodworks Logo" class="pic_logo"></a>
+        <div class="logo-icon">
+          <a href="index.html"><img src="images/sww_logo.jpg" alt="Sparrow Woodworks Logo" class="pic_logo"></a>
+        </div>
         <a href="index.html"><h1>Sparrow Woodworks</h1></a>
       </div>
       <nav>
