--- a/kitchen.html
+++ b/kitchen.html
@@ -21,7 +21,9 @@
          <span></span>
        </div>
        <div class="logo">
-         <a href="index.html"><img src="images/lc_logo1.jpg" alt="LaFary Construction Logo" class="pic_logo"></a>
+         <div class="logo-icon">
+           <a href="index.html"><img src="images/sww_logo.jpg" alt="Sparrow Woodworks Logo" class="pic_logo"></a>
+         </div>
          <h1>LaFary Construction</h1>
        </div>
        <nav>
