--- a/newsfeed.html
+++ b/newsfeed.html
@@ -27,7 +27,9 @@
       <span></span>
     </div>
     <div class="logo">
-      <a href="index.html"><img src="images/sww_logo.jpg" alt="Sparrow Woodworks Logo" class="pic_logo"></a>
+      <div class="logo-icon">
+        <a href="index.html"><img src="images/sww_logo.jpg" alt="Sparrow Woodworks Logo" class="pic_logo"></a>
+      </div>
       <a href="index.html"><h1>Sparrow Woodworks</h1></a>
     </div>
     <nav>
@@ -46,7 +48,7 @@
 
 
   <main id="main">
-    <div id="service">
+    <div id="service" class="bkg-header">
       <section class="section">
         <div class="container">
           <h2 class="h1">News Feed</h2>
