--- a/examples.html
+++ b/examples.html
@@ -30,7 +30,9 @@
         <span></span>
       </div>
       <div class="logo">
-        <a href="index.html"><img src="images/sww_logo.jpg" alt="Sparrow Woodworks Logo" class="pic_logo"></a>
+        <div class="logo-icon">
+          <a href="index.html"><img src="images/sww_logo.jpg" alt="Sparrow Woodworks Logo" class="pic_logo"></a>
+        </div>
         <a href="index.html"><h1>Sparrow Woodworks</h1></a>
       </div>
       <nav>
@@ -47,7 +49,7 @@
   </header>
 
   <main id="main">
-    <div id="example">
+    <div id="example" class="bkg-header">
       <section class="section">
         <div class="container">
           <h2 class="h1">Examples</h2>
