--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="item">
       <img src="images/img_1764.jpg" width="300" height="300" alt="Garage" class="pic-main">
       <div class="caption animated fadeInUp">
-        <p>Farmhouse Entertainment Center</p>
+        <p>Entertainment Center</p>
         <p>Message us for a quote!</p>
         <a href="examples.html" class="btn btn-primary btn-lg">See More</a>
       </div>
@@ -90,27 +90,7 @@
     <div><img src="images/img_20.jpg" width="300" height="300" alt="" class="pic-main"></div> -->
   </div>
 
-  <main id="main">
-    <section class="section">
-      <div class="row">
-        <div class="col-sm-3">
-          <img class="img-responsive" src="images/img_1753.jpg" alt="Nightstand">
-          <a href="examples.html" class="btn btn-block btn-ghost">Like What You See?</a>
-        </div>
-        <div class="col-sm-3">
-          <img class="img-responsive" src="images/img_1756.jpg" alt="Nightstand">
-          <a href="examples.html" class="btn btn-block btn-ghost">Like What You See?</a>
-        </div>
-        <div class="col-sm-3">
-          <img class="img-responsive" src="images/img_1757.jpg" alt="Nightstand">
-          <a href="examples.html" class="btn btn-block btn-ghost">Like What You See?</a>
-        </div>
-        <div class="col-sm-3">
-          <img class="img-responsive" src="images/img_1758.jpg" alt="Nightstand">
-          <a href="examples.html" class="btn btn-block btn-ghost">Like What You See?</a>
-        </div>
-      </div>
-    </section>
+
 
 
       <section class="section">
