--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="examples.html">Photos/Examples</a></li>
-          <li><a href="newsfeed.html">News Feed</a></li>
           <li><a href="products.html">Products</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -53,7 +52,7 @@
     <div class="item">
       <img src="images/img_1763.jpg" width="300" height="300" alt="Whtie Kitchen" class="pic-main">
       <div class="caption animated fadeInUp">
-        <p>Rustic Farmhouse Style Coffee Table</p>
+        <p>Farmhouse Style Coffee Table</p>
         <p>Message us for a quote!</p>
         <a href="examples.html" class="btn btn-primary btn-lg">See More</a>
       </div>
