I think it's done

--- a/examples.html
+++ b/examples.html
@@ -129,8 +129,8 @@
 
       <section class="section cta">
         <div class="container">
-          <h3>Let's Get Started!</h3>
-          <p>We are able to provide almost any service that you may need done to your home. We can do your basic handyman work all the way up to entire room additions from the ground up! If you are interested in any more of what we can provide, there is a full list of services on our Servies page.</p>
+          <h3 class="h2">Already have something in mind?</h3>
+          <p>If there is something that you already know you wan to have built, feel free to contact us roght away and we'll see what we can do for you.</p>
 
             <div class="row">
               <div class="col-sm-4 col-sm-offset-4">
