--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
         <div class="container">
           <div class="col-sm-7">
           <h3>Who We Are</h3>
-          <p>Here at Sparrow Woodworks we Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>Here at Sparrow Woodworks we like to think of our customers as family. And as our family, we like to go to great lengths to make sure that you're taken care of. We make sure that whatever you order through us is made with skill and perfection. Unlike the competition, our furniture is customized to what you want.</p>
           <img src="images/sww_logo.jpg" alt="SWW Logo" class="pic-sww_logo_1">
         </div>
           <div class="row">
@@ -85,32 +85,32 @@
           <div class="timeline">
             <div class="container-timeline left">
               <div class="content">
-                <h2>March 2018</h2>
-                <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                <h2>Spring 2017</h2>
+                <p>The very start of the business.</p>
               </div>
             </div>
             <div class="container-timeline right">
               <div class="content">
-                <h2>May 2017</h2>
-                <p>First year in operation...stuff stuff and more stuff</p>
+                <h2>Summer 2017</h2>
+                <p>Our first delivery was made.</p>
               </div>
             </div>
             <div class="container-timeline left">
               <div class="content">
-                <h2>September 2016</h2>
-                <p>First filled for an LLC.</p>
+                <h2>Fall 2017</h2>
+                <p>Acquired our first workshop.</p>
               </div>
             </div>
             <div class="container-timeline right">
               <div class="content">
-                <h2>July 2016</h2>
-                <p>Got out brancding and name.</p>
+                <h2>Spring 2018</h2>
+                <p>Working hard to get your purchaces to you!</p>
               </div>
             </div>
             <div class="container-timeline left">
               <div class="content">
-                <h2>March 2016</h2>
-                <p>It all started when I saw a sparrow outwide of my window. Thus, Sparrow Woodwork was born! .</p>
+                <h2>Future 2018</h2>
+                <p>Hope to expand our business even further!</p>
               </div>
             </div>
           </div>
@@ -118,7 +118,7 @@
       </section>
       <section class="section cta">
         <div class="container">
-          <h3>Already have something in mind?</h3>
+          <h3 class="h2">Already have something in mind?</h3>
           <p>If there is something that you already know you wan to have built, feel free to contact us roght away and we'll see what we can do for you.</p>
 
           <div class="row">
@@ -134,14 +134,7 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-sm-4">
-          <p>Contact Number for Shea Sparrow <br> (502)517-1749</p>
-        </div>
-        <div class="col-sm-4">
-          <p>&copy; Sparrow Woodworks</p>
-      </div>
-        <div class="col-sm-4">
-          <p>@Sparrowwoodworks (Instagram) <br> Sparrow Woodworks (Facebook)</p>
+        <p>&copy; Copyright 2017 Sparrow Woodworks <br> Contact (513 617-1307)</p>
       </div>
     </div>
   </footer>
