--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <img src="images/img_1763.jpg" width="300" height="300" alt="Whtie Kitchen" class="pic-main">
       <div class="caption animated fadeInUp">
         <p>Farmhouse Style Coffee Table</p>
-        <p>Message us for a quote!</p>
+        <p>Check out more of our builds!</p>
         <a href="examples.html" class="btn btn-primary btn-lg">See More</a>
       </div>
     </div>
@@ -61,7 +61,7 @@
       <img src="images/img_1764.jpg" width="300" height="300" alt="Garage" class="pic-main">
       <div class="caption animated fadeInUp">
         <p>Entertainment Center</p>
-        <p>Message us for a quote!</p>
+        <p>Check out more of our builds!</p>
         <a href="examples.html" class="btn btn-primary btn-lg">See More</a>
       </div>
     </div>
@@ -69,7 +69,7 @@
       <img src="images/img_1776.jpg" width="300" height="300" alt="Bar" class="pic-main">
       <div class="caption animated fadeInUp">
         <p>Custom built Farmhouse Table</p>
-        <p>Message us for a quote!</p>
+        <p>Check out more of our builds!</p>
         <a href="examples.html" class="btn btn-primary btn-lg">See More</a>
       </div>
     </div>
@@ -77,7 +77,7 @@
       <img src="images/img_1774.jpg" width="300" height="300" alt="Deck" class="pic-main">
       <div class="caption animated fadeInUp">
         <p>12ft custom built Farmhouse Table</p>
-        <p>Message us for a quote!</p>
+        <p>Check out more of our builds!</p>
         <a href="examples.html" class="btn btn-primary btn-lg">See More</a>
       </div>
     </div>
@@ -85,7 +85,7 @@
       <img src="images/img_1769.jpg" width="300" height="300" alt="Brown Kitchen" class="pic-main">
       <div class="caption animated fadeInUp">
         <p>Rustic American Flag</p>
-        <p>Message us for a quote!</p>
+        <p>Check out more of our builds!</p>
         <a href="examples.html" class="btn btn-primary btn-lg">See More</a>
       </div>
     </div>
@@ -119,8 +119,8 @@
 
       <section class="section cta">
         <div class="container">
-          <h3 class="h2">Let's Get Started!</h3>
-          <p>We are able to provide almost any service that you may need done to your home. We can do your basic handyman work all the way up to entire room additions from the ground up! If you are interested in any more of what we can provide, there is a full list of services on our Servies page.</p>
+          <h3 class="h2">Already have something in mind?</h3>
+          <p>If there is something that you already know you wan to have built, feel free to contact us roght away and we'll see what we can do for you.</p>
 
           <div class="row">
             <div class="col-sm-4 col-sm-offset-4">
