--- a/products.html
+++ b/products.html
@@ -61,7 +61,7 @@
 
           <div class="row">
             <div class="col-sm-6">
-              <h4>Furniture:</h4>
+              <h4>What kind of furniture can we make you?</h4>
                  <ul>
                   <li>Chairs</li>
                   <li>Dining Tables</li>
@@ -69,13 +69,10 @@
                   <li>Entertainment Centers</li>
                   <li>Coffee Tables</li>
                   <li>Decorative Pieces</li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
                 </ul>
             </div>
             <div class="col-sm-6">
-              <h4>Types of Wood:</h4>
+              <h4>What types of wood do we use?</h4>
                 <ul>
                   <li>Pine</li>
                   <li>Maple</li>
@@ -89,7 +86,7 @@
           </div>
           <div class="row">
             <div class="container-fluid">
-              <h4>Additonal Resources</h4>
+              <h4>Need some inspiration for wood or knobs?</h4>
 
               <p><a href="https://www.homedepot.com" target="_blank">HomeDepot</a></p>
               <p><a href="https://www.lowes.com/" target="_blank">Lowes</a></p>
@@ -102,8 +99,8 @@
 
       <section class="section cta">
         <div class="container">
-          <h3>Let's Get Started!</h3>
-          <p>We are able to provide almost any service that you may need done to your home. We can do your basic handyman wokr all the way up to entire room additions from the ground up! If you are interested in any more of what we can provide, there is a full list of services on our Servies page.</p>
+          <h3 class="h2">Already have something in mind?</h3>
+          <p>If there is something that you already know you wan to have built, feel free to contact us roght away and we'll see what we can do for you.</p>
 
           <div class="row">
             <div class="col-sm-4 col-sm-offset-4">
