--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
       <section class="section cta">
         <div class="container">
           <h3 class="h2">Already have something in mind?</h3>
-          <p>If there is something that you already know you wan to have built, feel free to contact us roght away and we'll see what we can do for you.</p>
+          <p>If there is something that you already know you want to have built, feel free to contact us right away and we'll see what we can do for you.</p>
 
           <div class="row">
             <div class="col-sm-4 col-sm-offset-4">
