--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-  <!-- used for development only, REMOVE before turning in -->
-  <link href="css/breakpoint-reporter.css" rel="stylesheet">
-  <!-- end development code REMOVE ME!-->
-
   <link rel="stylesheet" type="text/css" href="css/slick.css"/>
   <link href="css/plug-ins.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
@@ -76,7 +72,7 @@
     <div class="item">
       <img src="images/img_1774.jpg" width="300" height="300" alt="Deck" class="pic-main">
       <div class="caption animated fadeInUp">
-        <p>12ft custom built Farmhouse Table</p>
+        <p>Custom built Farmhouse Table</p>
         <p>Check out more of our builds!</p>
         <a href="examples.html" class="btn btn-primary btn-lg">See More</a>
       </div>
